2008-06-16  Pavel Hanak  <hanak@asellus.cz>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_get_type): Added 'bigint'.

2008-06-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/dualform.py: Disable the title bar in multi-form
	inner forms.

	* pytis/form/list.py: Allow disabling the title bar in derived
	classes.

	* pytis/form/application.py (Application._create_toolbar_button):
	Added a hack for special handling of DualForm.COMMAND_OTHER_FORM.

	* pytis/form/screen.py (wx_button): Docstring updated.

	* pytis/form/commands_.py: DualForm.COMMAND_OTHER_FORM added to
	toolbar.

2008-06-12  Pavel Hanak  <hanak@asellus.cz>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_create_sql_commands):
	Value of `pg_rewrite.ev_type' is of type `char', not `integer'. 	

2008-06-12  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py: Don't create form toolbar.  Form toolbar
	actions transformed to commands to allow their invocation from
	application toolbar. 

	* pytis/form/configui.py (ConfigForm._create_print_menu): Renamed to `_print_menu'.

	* pytis/form/commands_.py: Define UI commands to be used both for
	toolbar buttons and menu items.

	* pytis/form/command.py (UICommand): New class.

	* pytis/form/application.py: Create a toolbar.

	* pytis/form/event.py (_is_user_event): Exclude
	`wx.UpdateUIEvent'.
	
2008-06-11  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (EditForm._export_field): Escape enumeration
	display values.

	* pytis/presentation/field.py (PresentedRow.enumerate): Sort the
	items according to codebook's cb_spec or view_spec sorting.

	* pytis/data/types_.py (DataEnumerator.values): New argument
	`sort'.

2008-06-09  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py (current_form): Handle also multi
	forms.

	* pytis/form/dualform.py: Added experimental support for
	multi side forms.

	* pytis/presentation/spec.py (Binding): New class (experimental).
